--- a/aula11/ex011.html
+++ b/aula11/ex011.html
@@ -10,7 +10,7 @@
     <h1>Sistema de Cidadania</h1>
     País de nascimento: <input type="text" name="txtpaís" id="txtpaís">
     <input type="button" value="Verificar" onclick="verificar()">
-    <div id="res">0
+    <div id="res">
  
     </div>
     <script>
