--- a/Tutorial Mozilla/tutMozilla/index.html
+++ b/Tutorial Mozilla/tutMozilla/index.html
@@ -7,43 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <button>Aperte-me</button>  
-
-
-    <script>
-        /*
-        var button = document.querySelector('button');
-
-        button.onclick = function() {
-        var nome = prompt('Qual é o seu nome?');
-        alert('Olá ' + nome + ', é um prazer te ver!');
-        }
-        */
-
-        /*
-        var meuNome;
-        var minhaIdade;
-
-        meuNome = 'Chris';
-        minhaIdade = 37;
-        */
-
-        var meuNomeArray = ['Chris', 'Bob', 'Jim'];  //arrays
-        var meuNumeroArray = [10,15,40];
-
-        console.log(meuNomeArray[2])
-
-        var cachorro = { nome : 'Totó', raca : 'Dálmata' }; //objetos
-        console.log(cachorro.nome)
-
-        var meuNumero = '500'; // opa, isso continua sendo uma string
-        typeof(meuNumero);
+    <div class="output" style="min-height: 150px;">
         
-        meuNumero = 500; // bem melhor — agora isso é um número
-        typeof(meuNumero);
-
-        </script>
-
-
+        <ul></ul>        
+        <p></p>
+        
+    </div>
+    <script src="./produtos.js"></script>
 </body>
 </html>
